work on TaskStateController and other changes